feat: Update service proxies to enhance logging and improve error handling